[package]
name = "mdtolinkedin"
version = "0.1.0"
edition = "2021"
description = "Convert Markdown to LinkedIn-compatible text"
license = "MIT"
repository = "https://github.com/juanjecilla/mdtolinkedin-cli"

[dependencies]
clap = { version = "4", features = ["derive"] }
pulldown-cmark = "0.10"
syntect = "5"
resvg = "0.35"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "convert_large"
harness = false
